<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="30dp">

    <TextView
        android:id="@+id/TitleLabelTextView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EmailTextInputLayout"
        android:layout_centerHorizontal="false"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <!--UserName Portion is listed below: -->

    <!--Email Portion is listed below: -->
    <TextView
        android:id="@+id/HaveAnAccountRedirect"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SignUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-200dp"
        android:text="@string/HaveAnAccount"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/EmailTextInputLayout"
        android:layout_above="@id/passwordTextInputLayout"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activ_sign_up_email"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password Portion is listed below: -->
    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/passwordTextInputLayout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activ_sign_up_password"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Sign Up Button -->
    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextInputLayout"
        android:layout_alignStart="@+id/passwordTextInputLayout"
        android:layout_alignEnd="@+id/passwordTextInputLayout"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#1F45FC"
        android:text="@string/activ_sign_up" />

</RelativeLayout>
