<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="30dp">

    <!--Email Portion is listed below: -->

    <TextView
        android:id="@+id/EnterEmailTextView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/EnterEmailTextInput"
        android:layout_alignEnd="@+id/EnterEmailTextInput"
        android:layout_alignBottom="@+id/ConfirmButton"
        android:layout_marginBottom="155dp"
        android:color="@color/black"
        android:text="@string/reset_password"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LoginTextView"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ConfirmButton"
        android:layout_alignTop="@+id/ConfirmButton"
        android:layout_alignEnd="@+id/ConfirmButton"
        android:layout_alignBottom="@+id/EnterEmailTextView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="-411dp"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/RedirectLogin"
        android:textColor="#0C090A"
        android:textColorHint="@color/black" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/EnterEmailTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="219dp">

        <EditText
            android:id="@+id/EditEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ForgotPasswordTextView"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_email"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Sign Up Button -->
    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EnterEmailTextInput"
        android:layout_alignStart="@+id/EnterEmailTextInput"
        android:layout_alignEnd="@+id/EnterEmailTextInput"
        android:layout_alignBottom="@+id/EnterEmailTextInput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-78dp"
        android:backgroundTint="#1F45FC"
        android:text="@string/submit" />

</RelativeLayout>